Address PR feedback.
* Make string representations of all `ExprType`s uppercase.
* Remove functions from `IndexMapping` used in tests only.
* Change `OpenSearchDataType::cloneEmpty` function to avoid using reflection; update derived classes to override it.

Signed-off-by: Yury-Fridlyand <yury.fridlyand@improving.com>